fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2417,7 +2417,7 @@ ol.results li::before {
   font-size: 20px;
   font-weight: bold;
   color: white;
-  margin-right: 5px;
+  margin-right: 10px;
   padding: 3px;
   border-radius: 18px;
   width: 35px;
